simplify asset db + remove controlAsset from Reissue API
