# indexer/rest/service/model_asset_group.go
@@ -1,198 +1,0 @@
-/*
-
-
-No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-
-API version: version not set
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package openapi
-
-import (
-	"encoding/json"
-)
-
-// checks if the AssetGroup type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &AssetGroup{}
-
-// AssetGroup struct for AssetGroup
-type AssetGroup struct {
-		Id *string `json:"id,omitempty"`
-		Metadata []AssetMetadata `json:"metadata,omitempty"`
-		Quantity *int32 `json:"quantity,omitempty"`
-}
-
-// NewAssetGroup instantiates a new AssetGroup object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewAssetGroup() *AssetGroup {
-	this := AssetGroup{}
-	return &this
-}
-
-// NewAssetGroupWithDefaults instantiates a new AssetGroup object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewAssetGroupWithDefaults() *AssetGroup {
-	this := AssetGroup{}
-	return &this
-}
-
-// GetId returns the Id field value if set, zero value otherwise.
-func (o *AssetGroup) GetId() string {
-	if o == nil || IsNil(o.Id) {
-		var ret string
-		return ret
-	}
-	return *o.Id
-}
-
-// GetIdOk returns a tuple with the Id field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *AssetGroup) GetIdOk() (*string, bool) {
-	if o == nil || IsNil(o.Id) {
-		return nil, false
-	}
-	return o.Id, true
-}
-
-// HasId returns a boolean if a field has been set.
-func (o *AssetGroup) HasId() bool {
-	if o != nil && !IsNil(o.Id) {
-		return true
-	}
-
-	return false
-}
-
-// SetId gets a reference to the given string and assigns it to the Id field.
-func (o *AssetGroup) SetId(v string) {
-	o.Id = &v
-}
-
-// GetMetadata returns the Metadata field value if set, zero value otherwise.
-func (o *AssetGroup) GetMetadata() []AssetMetadata {
-	if o == nil || IsNil(o.Metadata) {
-		var ret []AssetMetadata
-		return ret
-	}
-	return o.Metadata
-}
-
-// GetMetadataOk returns a tuple with the Metadata field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *AssetGroup) GetMetadataOk() ([]AssetMetadata, bool) {
-	if o == nil || IsNil(o.Metadata) {
-		return nil, false
-	}
-	return o.Metadata, true
-}
-
-// HasMetadata returns a boolean if a field has been set.
-func (o *AssetGroup) HasMetadata() bool {
-	if o != nil && !IsNil(o.Metadata) {
-		return true
-	}
-
-	return false
-}
-
-// SetMetadata gets a reference to the given []AssetMetadata and assigns it to the Metadata field.
-func (o *AssetGroup) SetMetadata(v []AssetMetadata) {
-	o.Metadata = v
-}
-
-// GetQuantity returns the Quantity field value if set, zero value otherwise.
-func (o *AssetGroup) GetQuantity() int32 {
-	if o == nil || IsNil(o.Quantity) {
-		var ret int32
-		return ret
-	}
-	return *o.Quantity
-}
-
-// GetQuantityOk returns a tuple with the Quantity field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *AssetGroup) GetQuantityOk() (*int32, bool) {
-	if o == nil || IsNil(o.Quantity) {
-		return nil, false
-	}
-	return o.Quantity, true
-}
-
-// HasQuantity returns a boolean if a field has been set.
-func (o *AssetGroup) HasQuantity() bool {
-	if o != nil && !IsNil(o.Quantity) {
-		return true
-	}
-
-	return false
-}
-
-// SetQuantity gets a reference to the given int32 and assigns it to the Quantity field.
-func (o *AssetGroup) SetQuantity(v int32) {
-	o.Quantity = &v
-}
-
-func (o AssetGroup) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o AssetGroup) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	if !IsNil(o.Id) {
-		toSerialize["id"] = o.Id
-	}
-	if !IsNil(o.Metadata) {
-		toSerialize["metadata"] = o.Metadata
-	}
-	if !IsNil(o.Quantity) {
-		toSerialize["quantity"] = o.Quantity
-	}
-	return toSerialize, nil
-}
-
-type NullableAssetGroup struct {
-	value *AssetGroup
-	isSet bool
-}
-
-func (v NullableAssetGroup) Get() *AssetGroup {
-	return v.value
-}
-
-func (v *NullableAssetGroup) Set(val *AssetGroup) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableAssetGroup) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableAssetGroup) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableAssetGroup(val *AssetGroup) *NullableAssetGroup {
-	return &NullableAssetGroup{value: val, isSet: true}
-}
-
-func (v NullableAssetGroup) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableAssetGroup) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
