# indexer/rest/service/model_get_asset_group_response.go
@@ -1,162 +1,0 @@
-/*
-
-
-No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-
-API version: version not set
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package openapi
-
-import (
-	"encoding/json"
-)
-
-// checks if the GetAssetGroupResponse type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &GetAssetGroupResponse{}
-
-// GetAssetGroupResponse struct for GetAssetGroupResponse
-type GetAssetGroupResponse struct {
-		AssetGroup *AssetGroup `json:"assetGroup,omitempty"`
-		AssetId *string `json:"assetId,omitempty"`
-}
-
-// NewGetAssetGroupResponse instantiates a new GetAssetGroupResponse object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewGetAssetGroupResponse() *GetAssetGroupResponse {
-	this := GetAssetGroupResponse{}
-	return &this
-}
-
-// NewGetAssetGroupResponseWithDefaults instantiates a new GetAssetGroupResponse object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewGetAssetGroupResponseWithDefaults() *GetAssetGroupResponse {
-	this := GetAssetGroupResponse{}
-	return &this
-}
-
-// GetAssetGroup returns the AssetGroup field value if set, zero value otherwise.
-func (o *GetAssetGroupResponse) GetAssetGroup() AssetGroup {
-	if o == nil || IsNil(o.AssetGroup) {
-		var ret AssetGroup
-		return ret
-	}
-	return *o.AssetGroup
-}
-
-// GetAssetGroupOk returns a tuple with the AssetGroup field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *GetAssetGroupResponse) GetAssetGroupOk() (*AssetGroup, bool) {
-	if o == nil || IsNil(o.AssetGroup) {
-		return nil, false
-	}
-	return o.AssetGroup, true
-}
-
-// HasAssetGroup returns a boolean if a field has been set.
-func (o *GetAssetGroupResponse) HasAssetGroup() bool {
-	if o != nil && !IsNil(o.AssetGroup) {
-		return true
-	}
-
-	return false
-}
-
-// SetAssetGroup gets a reference to the given AssetGroup and assigns it to the AssetGroup field.
-func (o *GetAssetGroupResponse) SetAssetGroup(v AssetGroup) {
-	o.AssetGroup = &v
-}
-
-// GetAssetId returns the AssetId field value if set, zero value otherwise.
-func (o *GetAssetGroupResponse) GetAssetId() string {
-	if o == nil || IsNil(o.AssetId) {
-		var ret string
-		return ret
-	}
-	return *o.AssetId
-}
-
-// GetAssetIdOk returns a tuple with the AssetId field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *GetAssetGroupResponse) GetAssetIdOk() (*string, bool) {
-	if o == nil || IsNil(o.AssetId) {
-		return nil, false
-	}
-	return o.AssetId, true
-}
-
-// HasAssetId returns a boolean if a field has been set.
-func (o *GetAssetGroupResponse) HasAssetId() bool {
-	if o != nil && !IsNil(o.AssetId) {
-		return true
-	}
-
-	return false
-}
-
-// SetAssetId gets a reference to the given string and assigns it to the AssetId field.
-func (o *GetAssetGroupResponse) SetAssetId(v string) {
-	o.AssetId = &v
-}
-
-func (o GetAssetGroupResponse) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o GetAssetGroupResponse) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	if !IsNil(o.AssetGroup) {
-		toSerialize["assetGroup"] = o.AssetGroup
-	}
-	if !IsNil(o.AssetId) {
-		toSerialize["assetId"] = o.AssetId
-	}
-	return toSerialize, nil
-}
-
-type NullableGetAssetGroupResponse struct {
-	value *GetAssetGroupResponse
-	isSet bool
-}
-
-func (v NullableGetAssetGroupResponse) Get() *GetAssetGroupResponse {
-	return v.value
-}
-
-func (v *NullableGetAssetGroupResponse) Set(val *GetAssetGroupResponse) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableGetAssetGroupResponse) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableGetAssetGroupResponse) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableGetAssetGroupResponse(val *GetAssetGroupResponse) *NullableGetAssetGroupResponse {
-	return &NullableGetAssetGroupResponse{value: val, isSet: true}
-}
-
-func (v NullableGetAssetGroupResponse) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableGetAssetGroupResponse) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
