# indexer/rest/service/model_get_asset_response.go
@@ -1,0 +1,235 @@
+/*
+
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: version not set
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the GetAssetResponse type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &GetAssetResponse{}
+
+// GetAssetResponse struct for GetAssetResponse
+type GetAssetResponse struct {
+		AssetId *string `json:"assetId,omitempty"`
+		ControlAsset *string `json:"controlAsset,omitempty"`
+		Metadata []AssetMetadata `json:"metadata,omitempty"`
+	// bigint integer
+		Supply *string `json:"supply,omitempty"`
+}
+
+// NewGetAssetResponse instantiates a new GetAssetResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewGetAssetResponse() *GetAssetResponse {
+	this := GetAssetResponse{}
+	return &this
+}
+
+// NewGetAssetResponseWithDefaults instantiates a new GetAssetResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewGetAssetResponseWithDefaults() *GetAssetResponse {
+	this := GetAssetResponse{}
+	return &this
+}
+
+// GetAssetId returns the AssetId field value if set, zero value otherwise.
+func (o *GetAssetResponse) GetAssetId() string {
+	if o == nil || IsNil(o.AssetId) {
+		var ret string
+		return ret
+	}
+	return *o.AssetId
+}
+
+// GetAssetIdOk returns a tuple with the AssetId field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *GetAssetResponse) GetAssetIdOk() (*string, bool) {
+	if o == nil || IsNil(o.AssetId) {
+		return nil, false
+	}
+	return o.AssetId, true
+}
+
+// HasAssetId returns a boolean if a field has been set.
+func (o *GetAssetResponse) HasAssetId() bool {
+	if o != nil && !IsNil(o.AssetId) {
+		return true
+	}
+
+	return false
+}
+
+// SetAssetId gets a reference to the given string and assigns it to the AssetId field.
+func (o *GetAssetResponse) SetAssetId(v string) {
+	o.AssetId = &v
+}
+
+// GetControlAsset returns the ControlAsset field value if set, zero value otherwise.
+func (o *GetAssetResponse) GetControlAsset() string {
+	if o == nil || IsNil(o.ControlAsset) {
+		var ret string
+		return ret
+	}
+	return *o.ControlAsset
+}
+
+// GetControlAssetOk returns a tuple with the ControlAsset field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *GetAssetResponse) GetControlAssetOk() (*string, bool) {
+	if o == nil || IsNil(o.ControlAsset) {
+		return nil, false
+	}
+	return o.ControlAsset, true
+}
+
+// HasControlAsset returns a boolean if a field has been set.
+func (o *GetAssetResponse) HasControlAsset() bool {
+	if o != nil && !IsNil(o.ControlAsset) {
+		return true
+	}
+
+	return false
+}
+
+// SetControlAsset gets a reference to the given string and assigns it to the ControlAsset field.
+func (o *GetAssetResponse) SetControlAsset(v string) {
+	o.ControlAsset = &v
+}
+
+// GetMetadata returns the Metadata field value if set, zero value otherwise.
+func (o *GetAssetResponse) GetMetadata() []AssetMetadata {
+	if o == nil || IsNil(o.Metadata) {
+		var ret []AssetMetadata
+		return ret
+	}
+	return o.Metadata
+}
+
+// GetMetadataOk returns a tuple with the Metadata field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *GetAssetResponse) GetMetadataOk() ([]AssetMetadata, bool) {
+	if o == nil || IsNil(o.Metadata) {
+		return nil, false
+	}
+	return o.Metadata, true
+}
+
+// HasMetadata returns a boolean if a field has been set.
+func (o *GetAssetResponse) HasMetadata() bool {
+	if o != nil && !IsNil(o.Metadata) {
+		return true
+	}
+
+	return false
+}
+
+// SetMetadata gets a reference to the given []AssetMetadata and assigns it to the Metadata field.
+func (o *GetAssetResponse) SetMetadata(v []AssetMetadata) {
+	o.Metadata = v
+}
+
+// GetSupply returns the Supply field value if set, zero value otherwise.
+func (o *GetAssetResponse) GetSupply() string {
+	if o == nil || IsNil(o.Supply) {
+		var ret string
+		return ret
+	}
+	return *o.Supply
+}
+
+// GetSupplyOk returns a tuple with the Supply field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *GetAssetResponse) GetSupplyOk() (*string, bool) {
+	if o == nil || IsNil(o.Supply) {
+		return nil, false
+	}
+	return o.Supply, true
+}
+
+// HasSupply returns a boolean if a field has been set.
+func (o *GetAssetResponse) HasSupply() bool {
+	if o != nil && !IsNil(o.Supply) {
+		return true
+	}
+
+	return false
+}
+
+// SetSupply gets a reference to the given string and assigns it to the Supply field.
+func (o *GetAssetResponse) SetSupply(v string) {
+	o.Supply = &v
+}
+
+func (o GetAssetResponse) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o GetAssetResponse) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.AssetId) {
+		toSerialize["assetId"] = o.AssetId
+	}
+	if !IsNil(o.ControlAsset) {
+		toSerialize["controlAsset"] = o.ControlAsset
+	}
+	if !IsNil(o.Metadata) {
+		toSerialize["metadata"] = o.Metadata
+	}
+	if !IsNil(o.Supply) {
+		toSerialize["supply"] = o.Supply
+	}
+	return toSerialize, nil
+}
+
+type NullableGetAssetResponse struct {
+	value *GetAssetResponse
+	isSet bool
+}
+
+func (v NullableGetAssetResponse) Get() *GetAssetResponse {
+	return v.value
+}
+
+func (v *NullableGetAssetResponse) Set(val *GetAssetResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableGetAssetResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableGetAssetResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableGetAssetResponse(val *GetAssetResponse) *NullableGetAssetResponse {
+	return &NullableGetAssetResponse{value: val, isSet: true}
+}
+
+func (v NullableGetAssetResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableGetAssetResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
